--- a/VandyMobile/MyVMViewController.xib
+++ b/VandyMobile/MyVMViewController.xib
@@ -58,6 +58,7 @@
 						<string key="NSFrame">{{37, 150}, {247, 49}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -163,7 +164,7 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">myVM</string>
+								<string key="IBUIText">Current Team</string>
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MCAwIDAAA</bytes>
@@ -193,7 +194,7 @@
 								<string key="NSFrame">{{104, 111}, {202, 22}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="89386331"/>
+								<reference key="NSNextKeyView" ref="2893705"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -320,7 +321,7 @@
 							<object class="IBUIButton" id="89386331">
 								<reference key="NSNextResponder" ref="906725394"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{103, 168}, {115, 101}}</string>
+								<string key="NSFrame">{{177, 168}, {115, 101}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="931826467"/>
@@ -345,7 +346,7 @@
 							<object class="IBUILabel" id="931826467">
 								<reference key="NSNextResponder" ref="906725394"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{129, 248}, {65, 21}}</string>
+								<string key="NSFrame">{{202, 248}, {65, 21}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1033075535"/>
@@ -359,6 +360,58 @@
 								<reference key="IBUITextColor" ref="162757058"/>
 								<nil key="IBUIHighlightedColor"/>
 								<reference key="IBUIShadowColor" ref="120156651"/>
+								<string key="IBUIShadowOffset">{0, 1}</string>
+								<int key="IBUIBaselineAdjustment">0</int>
+								<int key="IBUITextAlignment">1</int>
+								<reference key="IBUIFontDescription" ref="159104207"/>
+								<reference key="IBUIFont" ref="687945850"/>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+							</object>
+							<object class="IBUIButton" id="2893705">
+								<reference key="NSNextResponder" ref="906725394"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{28, 169}, {115, 101}}</string>
+								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="9865308"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<int key="IBUIContentHorizontalAlignment">0</int>
+								<int key="IBUIContentVerticalAlignment">0</int>
+								<reference key="IBUIHighlightedTitleColor" ref="67732506"/>
+								<object class="NSColor" key="IBUINormalTitleColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+								</object>
+								<reference key="IBUINormalTitleShadowColor" ref="309601165"/>
+								<object class="NSCustomResource" key="IBUINormalImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">81-dashboard@2x.png</string>
+								</object>
+								<reference key="IBUIFontDescription" ref="159104207"/>
+								<reference key="IBUIFont" ref="687945850"/>
+							</object>
+							<object class="IBUILabel" id="9865308">
+								<reference key="NSNextResponder" ref="906725394"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{53, 248}, {65, 21}}</string>
+								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="89386331"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">Settings</string>
+								<reference key="IBUITextColor" ref="162757058"/>
+								<nil key="IBUIHighlightedColor"/>
+								<object class="NSColor" key="IBUIShadowColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC42IDAuNiAwLjYgMC42AA</bytes>
+								</object>
 								<string key="IBUIShadowOffset">{0, 1}</string>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">1</int>
@@ -488,6 +541,14 @@
 					<int key="connectionID">58</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">settingsButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="2893705"/>
+					</object>
+					<int key="connectionID">63</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">devTeamButtonPressed</string>
 						<reference key="source" ref="409957715"/>
@@ -537,9 +598,11 @@
 							<reference ref="409957715"/>
 							<reference ref="268319198"/>
 							<reference ref="992010058"/>
-							<reference ref="89386331"/>
-							<reference ref="931826467"/>
 							<reference ref="715970994"/>
+							<reference ref="89386331"/>
+							<reference ref="2893705"/>
+							<reference ref="931826467"/>
+							<reference ref="9865308"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 						<string key="objectName">loggedInView</string>
@@ -622,6 +685,17 @@
 						<reference key="object" ref="913953477"/>
 						<reference key="parent" ref="33855933"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">61</int>
+						<reference key="object" ref="2893705"/>
+						<reference key="parent" ref="906725394"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">62</int>
+						<reference key="object" ref="9865308"/>
+						<reference key="parent" ref="906725394"/>
+						<string key="objectName">Label - Settings</string>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -642,6 +716,8 @@
 				<string key="34.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="54.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="56.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="61.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="62.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -650,7 +726,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">59</int>
+			<int key="maxID">63</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -667,6 +743,7 @@
 						<string key="profileImageView">UIImageView</string>
 						<string key="profilePictureBorderContainerView">UIView</string>
 						<string key="profilePictureContainerView">UIView</string>
+						<string key="settingsButton">UIButton</string>
 						<string key="teamButton">UIButton</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -706,6 +783,10 @@
 							<string key="name">profilePictureContainerView</string>
 							<string key="candidateClassName">UIView</string>
 						</object>
+						<object class="IBToOneOutletInfo" key="settingsButton">
+							<string key="name">settingsButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="teamButton">
 							<string key="name">teamButton</string>
 							<string key="candidateClassName">UIButton</string>
@@ -730,6 +811,7 @@
 			<string key="17-bar-chart@2x.png">{58, 46}</string>
 			<string key="18-envelope@2x.png">{48, 32}</string>
 			<string key="73-radar@2x.png">{54, 54}</string>
+			<string key="81-dashboard@2x.png">{56, 56}</string>
 			<string key="NextMeetingCanvasV2@2x.png">{640, 200}</string>
 			<string key="VandyMobileBackgroundCanvas@2x.png">{640, 734}</string>
 			<string key="VandyMobileIconNeue114.png">{114, 114}</string>
