--- a/VandyMobile/MyVMViewController.xib
+++ b/VandyMobile/MyVMViewController.xib
@@ -42,7 +42,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 367}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="366377339"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -57,8 +56,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{37, 150}, {247, 49}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -97,7 +94,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 59}, {320, 102}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="715970994"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -115,26 +111,20 @@
 										<reference key="NSNextResponder" ref="715970994"/>
 										<int key="NSvFlags">292</int>
 										<array class="NSMutableArray" key="NSSubviews">
-											<object class="IBUIImageView" id="913953477">
+											<object class="IBUIImageView" id="653409555">
 												<reference key="NSNextResponder" ref="33855933"/>
-												<int key="NSvFlags">292</int>
-												<string key="NSFrame">{{1, 1}, {65, 65}}</string>
+												<int key="NSvFlags">274</int>
+												<string key="NSFrameSize">{66, 66}</string>
 												<reference key="NSSuperview" ref="33855933"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="363668177"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="IBUIUserInteractionEnabled">NO</bool>
 												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-												<object class="NSCustomResource" key="IBUIImage">
-													<string key="NSClassName">NSImage</string>
-													<string key="NSResourceName">VandyMobileIconNeue114.png</string>
-												</object>
 											</object>
 										</array>
 										<string key="NSFrame">{{2, 2}, {66, 66}}</string>
 										<reference key="NSSuperview" ref="715970994"/>
-										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="913953477"/>
+										<reference key="NSNextKeyView" ref="653409555"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<object class="NSColor" key="IBUIBackgroundColor" id="988749328">
 											<int key="NSColorSpace">3</int>
@@ -145,7 +135,6 @@
 								</array>
 								<string key="NSFrame">{{20, 70}, {70, 70}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="33855933"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="988749328"/>
@@ -156,7 +145,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{104, 82}, {202, 25}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="643461006"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -193,7 +181,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{104, 111}, {202, 22}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="2893705"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -225,7 +212,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{28, 277}, {115, 113}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="268319198"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -250,7 +236,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{62, 367}, {46, 21}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="409957715"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -274,7 +259,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{177, 277}, {115, 113}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="992010058"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -299,7 +283,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{198, 367}, {72, 21}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="567928726"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -323,7 +306,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{177, 168}, {115, 101}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="931826467"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -348,7 +330,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{202, 248}, {65, 21}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1033075535"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -372,7 +353,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{28, 169}, {115, 101}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="9865308"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -397,7 +377,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{53, 248}, {65, 21}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="89386331"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -422,7 +401,6 @@
 						</array>
 						<string key="NSFrame">{{0, -59}, {320, 485}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1069856795"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="988749328"/>
@@ -431,7 +409,6 @@
 				</array>
 				<string key="NSFrame">{{0, 64}, {320, 367}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="906725394"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -510,14 +487,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">profileImageView</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="913953477"/>
-					</object>
-					<int key="connectionID">28</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">profilePictureContainerView</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="33855933"/>
@@ -547,6 +516,14 @@
 						<reference key="destination" ref="2893705"/>
 					</object>
 					<int key="connectionID">63</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">appImageView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="653409555"/>
+					</object>
+					<int key="connectionID">66</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -675,15 +652,10 @@
 						<int key="objectID">54</int>
 						<reference key="object" ref="33855933"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="913953477"/>
+							<reference ref="653409555"/>
 						</array>
 						<reference key="parent" ref="715970994"/>
 						<string key="objectName">ProfilePictureContainerView</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">8</int>
-						<reference key="object" ref="913953477"/>
-						<reference key="parent" ref="33855933"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">61</int>
@@ -695,6 +667,12 @@
 						<reference key="object" ref="9865308"/>
 						<reference key="parent" ref="906725394"/>
 						<string key="objectName">Label - Settings</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">64</int>
+						<reference key="object" ref="653409555"/>
+						<reference key="parent" ref="33855933"/>
+						<string key="objectName">AppImageView</string>
 					</object>
 				</array>
 			</object>
@@ -718,87 +696,17 @@
 				<string key="56.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="61.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="62.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="64.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">63</int>
+			<int key="maxID">66</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">MyVMViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="appNameLabel">UILabel</string>
-						<string key="backgroundImageView">UIImageView</string>
-						<string key="commitsButton">UIButton</string>
-						<string key="emailLabel">UILabel</string>
-						<string key="loggedInView">UIView</string>
-						<string key="loginButton">UIButton</string>
-						<string key="profileImageView">UIImageView</string>
-						<string key="profilePictureBorderContainerView">UIView</string>
-						<string key="profilePictureContainerView">UIView</string>
-						<string key="settingsButton">UIButton</string>
-						<string key="teamButton">UIButton</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="appNameLabel">
-							<string key="name">appNameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="backgroundImageView">
-							<string key="name">backgroundImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="commitsButton">
-							<string key="name">commitsButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="emailLabel">
-							<string key="name">emailLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="loggedInView">
-							<string key="name">loggedInView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="loginButton">
-							<string key="name">loginButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="profileImageView">
-							<string key="name">profileImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="profilePictureBorderContainerView">
-							<string key="name">profilePictureBorderContainerView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="profilePictureContainerView">
-							<string key="name">profilePictureContainerView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="settingsButton">
-							<string key="name">settingsButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="teamButton">
-							<string key="name">teamButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MyVMViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
@@ -814,7 +722,6 @@
 			<string key="81-dashboard@2x.png">{56, 56}</string>
 			<string key="NextMeetingCanvasV2@2x.png">{640, 200}</string>
 			<string key="VandyMobileBackgroundCanvas@2x.png">{640, 734}</string>
-			<string key="VandyMobileIconNeue114.png">{114, 114}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">1498</string>
 	</data>
